fixed nav, video alignment fix

--- a/src/containers/views/Home/Home.scss
+++ b/src/containers/views/Home/Home.scss
@@ -33,7 +33,7 @@
   .video-placeholder {
     display: flex;
     height: 100%;
-    width: calc((80vh - 8em) * (16 / 9));
+    width: 100%;
   }
 
   .video-placeholder {
